examples/test/testpolicy10803.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10803
  namespace: namespace159
spec:
  podSelector:
    matchLabels:
      key6: value47
      key15: value46
      key32: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value12
          key25: value22
          key36: value32
